--- a/20230406_Saturo_Summary.rmd
+++ b/20230406_Saturo_Summary.rmd
@@ -26,7 +26,7 @@ Load all of the spreadsheet information
 ```{r Load Raw Saturo Files, echo=FALSE, warning = FALSE}
 path2dir <- "C:\\Users\\kuhlalex\\OneDrive - Michigan State University\\Water Cycling Indicators\\Data\\Infiltration Data\\"
 folders <- dir(path2dir)
-folders <- subset(folders, grepl("Raw", folders))
+folders <- subset(folders, grepl("Raw", folders) & !grepl("Producer",folders))
 
 folder <- folders[1]
 file <- dir(paste0(path2dir, folder))[1]
@@ -39,6 +39,7 @@ for (folder in folders){
           name <- paste0(file, "-", season)
           sat_dat[[name]]  <- as.data.frame(read_excel(path = path2file, sheet = "Raw Data"))
           sat_dat[[name]]$season <- season
+          sat_dat[[name]]$year <- strsplit(folder, "[ |-]")[[1]][6]
           sat_dat[[name]]$FileName <- file
           if (!is.na(match("Flux (cm/s)", colnames(sat_dat[[name]])))){
                sat_dat[[name]][,"Flux (cm/hr)"] <- sat_dat[[name]][,"Flux (cm/s)"]*3600 # convert cm/s to cm/hr
@@ -48,6 +49,7 @@ for (folder in folders){
           }
 
           summary_dat  <- as.data.frame(read_excel(path = path2file, sheet = "Summary"))
+          sat_dat[[name]]$Serial <- summary_dat[11,2]
           sat_dat[[name]]$Kfs <- as.numeric(summary_dat[21, 2])
           sat_dat[[name]]$KfsErr <- as.numeric(summary_dat[22, 2])
           if (!is.na(match("Kfs (cm/s)", summary_dat[21, 1]))){
@@ -57,23 +59,26 @@ for (folder in folders){
      }
 }
 
-sat_dat_melt <- melt(sat_dat, id.vars = c("season", "FileName", "Time (min)", "Water Level (cm)", "Pressure (cm)", "Flux (cm/hr)", "Volume (mL/hr)", "Kfs", "KfsErr"))
+sat_dat_melt <- melt(sat_dat, id.vars = c("season", "year", "FileName", "Serial", "Time (min)", "Water Level (cm)", "Pressure (cm)", "Flux (cm/hr)", "Volume (mL/hr)", "Kfs", "KfsErr"))
 ```
 
 
 Next, parse the "Site" column into Treatment, Block, and Triangle columns
 ```{r parse Saturo data columns, echo = FALSE, warning = FALSE}
-sat_dat_melt$FileName <- gsub("^22-", "", sat_dat_melt$FileName) # append MI site ID to these sites
-sat_dat_melt$FileName <- gsub("^OK-", "", sat_dat_melt$FileName) # append MI site ID to these sites
+sat_dat_melt$FileName <- gsub("^22-", "", sat_dat_melt$FileName) # Drop 22 from filename
+sat_dat_melt$FileName <- gsub("^23-", "", sat_dat_melt$FileName) # Drop 23 from filename
+sat_dat_melt$FileName <- gsub("^_ 23-", "", sat_dat_melt$FileName) # Drop _ 23 from filename
+sat_dat_melt$FileName <- gsub("SP-", "", sat_dat_melt$FileName) 
+sat_dat_melt$FileName <- gsub("^OK-", "", sat_dat_melt$FileName) 
 
 sat_dat_melt$Site <- sapply(strsplit(sat_dat_melt$FileName, "[_|-]"), "[[", 1)
 sat_dat_melt$Treatment <- sapply(strsplit(sat_dat_melt$FileName, "[_|-]"), "[[", 2)
 sat_dat_melt$Block <- sapply(strsplit(sat_dat_melt$FileName, "[_|-]"), "[[", 3)
 
-# if site was WY you need to flip the treatment and block labels
-bl_tmp <- sat_dat_melt[sat_dat_melt$Site == "WY", "Block"]
-sat_dat_melt[sat_dat_melt$Site == "WY", "Block"] <- sat_dat_melt[sat_dat_melt$Site == "WY", "Treatment"]
-sat_dat_melt[sat_dat_melt$Site == "WY", "Treatment"] <- bl_tmp
+# if site was WY in 2022 you need to flip the treatment and block labels
+bl_tmp <- sat_dat_melt[sat_dat_melt$Site == "WY" & sat_dat_melt$year == '2022', "Block"]
+sat_dat_melt[sat_dat_melt$Site == "WY" & sat_dat_melt$year == '2022', "Block"] <- sat_dat_melt[sat_dat_melt$Site == "WY" & sat_dat_melt$year == '2022', "Treatment"]
+sat_dat_melt[sat_dat_melt$Site == "WY" & sat_dat_melt$year == '2022', "Treatment"] <- bl_tmp
 
 sat_dat_melt$Triangle <- sapply(strsplit(sat_dat_melt$FileName, "[ |.|(|)|_|-]"), "[[", 4)
 sat_dat_melt$Bl_Tri <- paste0(sat_dat_melt$Block, "_", sat_dat_melt$Triangle)
@@ -83,277 +88,220 @@ sat_dat_melt$Bl_Tri <- paste0(sat_dat_melt$Block, "_", sat_dat_melt$Triangle)
 head(sat_dat_melt)
 ```
 
-Then remove known bad stretches of data due to sensor failure 
-
-```{r Clean up bad data stretches, warning = FALSE}
-# wc_dat <- subset(wc_dat, !(Name == "WY_AD-11-12" & Port == 2))
-# wc_dat <- wc_dat[!(wc_dat$Name == "MI-AD_9_1" & wc_dat$datetimeUTC < as_datetime("2022-8-15 19:00:00")), ]
-# wc_dat <- wc_dat[!(wc_dat$Name == "MI-PR_9_9" & wc_dat$Port == 3 &
-#                    wc_dat$datetimeUTC < as_datetime("2022-8-5 00:00:00") &
-#                    wc_dat$datetimeUTC > as_datetime("2022-7-28 00:00:00")), ]
-# wc_dat <- wc_dat[!(wc_dat$Name == "MI-PR_8_11" & wc_dat$Port == 3 &
-#                    wc_dat$datetimeUTC < as_datetime("2022-7-16 18:00:00") &
-#                    wc_dat$datetimeUTC > as_datetime("2022-7-16 12:00:00")), ]
-# wc_dat <- wc_dat[!(wc_dat$Name == "RR_PR_4_7" & wc_dat$Port == 3 &
-#                    wc_dat$datetimeUTC < as_datetime("2022-10-05 11:00:00") &
-#                    wc_dat$datetimeUTC > as_datetime("2022-8-24 02:00:00")), ]
-# wc_dat <- wc_dat[!(wc_dat$Name == "RR_PR_4_7" & wc_dat$Port == 3 &
-#                    wc_dat$datetimeUTC < as_datetime("2022-12-07 13:00:00") &
-#                    wc_dat$datetimeUTC > as_datetime("2022-11-04 12:00:00")), ]
-```
-
 ```{r Make some  plotting functions, echo = FALSE}
 get_flux_plot <- function(dat, tr){
-      p1 <- ggplot() + geom_point(data = dat,
-          aes(x = `Time (min)`, y = `Flux (cm/hr)`, group = as.factor(season), color = as.factor(season)),
-          size = 1, show.legend = FALSE) +
+      p1 <- ggplot() + geom_line(data = dat,
+          aes(x = `Time (min)`, y = `Flux (cm/hr)`, group = FileName, color = FileName),
+          size = 1, show.legend = TRUE) +
           theme_bw(base_size = 16) + ggtitle(paste0(dat$Site[1], " - ", tr), subtitle = paste0("Block ", dat$Block[1])) +
-          theme(axis.text.x = element_text(angle = 45, hjust = 1)) +
+          theme(axis.text.x = element_text(angle = 45, hjust = 1), legend.position = "bottom") +
           xlab("Time (min)") + ylab("Flux (cm/hr)") +
-          facet_wrap(FileName ~ Triangle, ncol = 3, scale = "free_y")
+          facet_wrap(Triangle ~ season, ncol = 2, scale = "free_y")
       return(p1)
       }
 
 
-get_pressure_plot <- function(dat, tr){
-      p1 <- ggplot() + geom_point(data = dat,
-          aes(x = `Time (min)`, y = `Pressure (cm)`, group = as.factor(season), color = as.factor(season)),
-          size = 1, show.legend = FALSE) +
-          theme_bw(base_size = 16) + ggtitle(paste0(dat$Site[1], " - ", tr), subtitle = paste0("Block ", dat$Block[1])) +
-          theme(axis.text.x = element_text(angle = 45, hjust = 1)) +
+get_pressure_plot <- function(dat){
+      p1 <- ggplot() + geom_line(data = dat,
+          aes(x = `Time (min)`, y = `Pressure (cm)`, group = FileName, color = FileName),
+          size = 1, show.legend = FALSE) + ggtitle(paste0(dat$Site[1], " - ", dat$season[1], ' ', dat$year[1])) + 
+          theme_bw(base_size = 16) + 
+          theme(axis.text.x = element_text(angle = 45, hjust = 1), legend.position = "bottom") +
           xlab("Time (min)") + ylab("Pressure (cm)") +
-          facet_wrap(FileName ~ Triangle, ncol = 3, scale = "free_y")
+          facet_wrap(~Serial, nrow = 3, scale = "free_y")
       return(p1)
       }
 
 get_KFS_plot <- function(dat, tr){
       p1 <- ggplot() + geom_point(data = dat,
-          aes(x = `Time (min)`, y = `Flux (cm/hr)`/`Pressure (cm)`, group = as.factor(season), color = as.factor(season)),
-          size = 1, show.legend = FALSE) +
-          geom_hline(data = dat, aes(yintercept = Kfs, color = as.factor(season)), linewidth = 1, alpha = 0.4, show.legend = FALSE) + 
+          aes(x = `Time (min)`, y = `Flux (cm/hr)`/`Pressure (cm)`, group = FileName, color = FileName),
+          size = 1, show.legend = TRUE) + 
+          geom_hline(data = dat, aes(yintercept = Kfs, color = FileName), linewidth = 1, alpha = 0.4, show.legend = FALSE) + 
           theme_bw(base_size = 16) + ggtitle(paste0(dat$Site[1], " - ", tr), subtitle = paste0("Block ", dat$Block[1])) +
-          theme(axis.text.x = element_text(angle = 45, hjust = 1)) +
+          theme(axis.text.x = element_text(angle = 45, hjust = 1), legend.position = "bottom") +
           xlab("Time (min)") + ylab("Flux/Pressure") +
-          facet_wrap(FileName ~ Triangle, ncol = 3, scale = "free_y")
+          facet_wrap(Triangle ~ season, ncol = 2, scale = "free_y")
       return(p1)
       }
-# get_wc_d_plot <- function(dat, t1, t2){
-#      p3 <- ggplot() + geom_point(data = dat, aes(x = datetimeUTC, y = value, color = Name), size = 1) +
-#      geom_line(data = dat, aes(x = datetimeUTC, y = sp_avg_value), color = 'black', linewidth = 2, show.legend = FALSE) +
-#      theme_bw(base_size = 16) + ggtitle(dat$Site[1]) +
-#      theme(axis.text.x = element_text(angle = 45, hjust = 1), legend.position = "bottom") +
-#      xlab("Date") + ylab("Water Content (cm^3/cm^3)") +
-#      xlim(c(t1, t2)) + facet_grid(FileName ~ Block)
-#      return(p3)
-# }
 
+get_KFS_boxplot_byTri <- function(dat){
+    p3 <- ggplot(data = dat, aes(x = reorder_within(Triangle,Kfs,Block), y = Kfs, fill = interaction(season,year))) +
+        geom_boxplot() +
+        xlab("Site") + ylab("Saturated K (cm/hr)") +
+        theme_bw(base_size = 16) + ggtitle(paste0(dat$Site[1], " - ", tr), subtitle = paste0("Block ", dat$Block[1])) +
+        theme(axis.text.x=element_text(angle=45,hjust=1)) + scale_fill_discrete(name = "Season and year") +
+        facet_wrap(~Block, ncol = 4, scale = "free_x")
+    return(p3)
+    } 
 
-# get_wc_mrd_plot <- function(dat, dat_mean, t1, t2){
-#     p4 <-ggplot() + geom_point(data = dat, aes(x = datetimeUTC, y = rd, color = Name), size = 1) +
-#      geom_hline(data = dat_mean, aes(yintercept = avg_rd, color = Name), linewidth = 1, alpha = 0.4) +
-#      geom_hline(yintercept = 0, color = "Black", linewidth = 2) +
-#      theme_bw(base_size = 16) + ggtitle(dat$Site[1]) +
-#      theme(axis.text.x = element_text(angle = 45, hjust = 1), legend.position = "bottom") +
-#      xlab("Date") + ylab("Relative Difference in Water Content (cm^3/cm^3)") +
-#      xlim(c(t1, t2)) +
-#      facet_grid(Port ~ Treatment)
-#      return(p4)
-# }
+get_flux_boxplot_byTri <- function(dat){
+    p3 <- ggplot(data = dat, aes(x = reorder_within(Triangle,avg_flux,Block), y = avg_flux, fill = interaction(season,year))) +
+        geom_boxplot() +
+        xlab("Site") + ylab("Avg Flux (cm/hr)") +
+        theme_bw(base_size = 16) + ggtitle(paste0(dat$Site[1], " - ", tr), subtitle = paste0("Block ", dat$Block[1])) +
+        theme(axis.text.x=element_text(angle=45,hjust=1)) + scale_fill_discrete(name = "Season and year") +
+        facet_wrap(~Block, ncol = 4, scale = "free_x")
+    return(p3)
+    } 
 
-# get_mrd_bar_plot <- function(dat){
-#      p2 <- ggplot(data = dat,
-#           aes(x = Bl_Tri, y = avg_rd, fill = as.factor(Name))) +
-#           geom_bar(position = "dodge", stat = "identity", show.legend = FALSE) +
-#           theme_bw(base_size = 16) + ggtitle(dat$Site[1]) +
-#           theme(axis.text.x = element_text(angle = 90, hjust = 1)) +
-#           xlab("Site") + ylab("Mean Relative Difference in Water Content") +
-#           facet_wrap(Port ~ Treatment, nrow = 3, scale = "free_x")
-#           scale_fill_discrete(name = "Triangle")
-#      return(p2)
-# }
+get_fluxvsksat_plot <- function(dat){
+      p1 <- ggplot(data = dat,
+          aes(x = Kfs, y = avg_flux, group = interaction(season,year), color = interaction(season,year), shape = Serial),
+          size = 3, stroke = 2, show.legend = TRUE) + geom_point() + scale_shape_manual(values=1:9) + 
+          geom_smooth(method = "lm") + stat_regline_equation(aes(label = ..rr.label..)) +
+          theme_bw(base_size = 16) + # ggtitle(paste0(dat$Site[1], " - ", tr), subtitle = paste0("Block ", dat$Block[1])) +
+          theme(axis.text.x = element_text(angle = 45, hjust = 1), legend.position = "bottom") +
+          xlab("Ksat (cm/hr)") + ylab("avg Flux cm/hr") #+
+      return(p1)
+}
 
-# get_mrd_bar_plot2 <- function(dat){
-#      p2 <- ggplot(data = dat,
-#           aes(reorder_within(Bl_Tri, avg_rd, list(Port,Treatment)), avg_rd, fill = as.factor(Name))) +
-#           geom_bar(position = "dodge", stat = "identity", show.legend = FALSE) +
-#           theme_bw(base_size = 16) + ggtitle(dat$Site[1]) +
-#           theme(axis.text.x = element_text(angle = 90, hjust = 1)) +
-#           xlab("Site") + ylab("Mean Relative Difference in Water Content") +
-#           scale_x_reordered() +
-#           facet_wrap(Port ~ Treatment, nrow = 3, scale = "free_x")
-#      return(p2)
-# }
-
-# get_sd_bar_plot <- function(dat){
-#      p2 <- ggplot(data = dat,
-#           aes(x = Bl_Tri, y = sd_rd, fill = as.factor(Name))) +
-#           geom_bar(position = "dodge", stat = "identity", show.legend = FALSE) +
-#           theme_bw(base_size = 16) + ggtitle(dat$Site[1]) +
-#           theme(axis.text.x = element_text(angle = 90, hjust = 1)) +
-#           xlab("Site") + ylab("SD Relative Difference in Water Content") +
-#           facet_wrap(Port ~ Treatment, nrow = 3, scale = "free_x")
-#           scale_fill_discrete(name = "Triangle")
-#      return(p2)
-# }
-
-# get_sd_bar_plot2 <- function(dat){
-#      p2 <- ggplot(data = dat,
-#           aes(reorder_within(Bl_Tri, sd_rd, list(Port,Treatment)), sd_rd, fill = as.factor(Name))) +
-#           geom_bar(position = "dodge", stat = "identity", show.legend = FALSE) +
-#           theme_bw(base_size = 16) + ggtitle(dat$Site[1]) +
-#           theme(axis.text.x = element_text(angle = 90, hjust = 1)) +
-#           xlab("Site") + ylab("Standard Deviation of Relative Difference in Water Content") +
-#           scale_x_reordered() +
-#           facet_wrap(Port ~ Treatment, nrow = 3, scale = "free_x")
-#      return(p2)
-# }
+get_fluxvsksat_plot_all <- function(dat){
+      p1 <- ggplot(data = dat,
+          aes(x = log10(Kfs), y = log10(avg_flux)), show.legend = TRUE) + 
+          geom_point(aes(color = Site, shape = season), size = 3) + 
+          geom_smooth(method = "lm") + stat_regline_equation(aes(label = ..rr.label..)) +
+          theme_bw(base_size = 16) + # ggtitle(paste0(dat$Site[1], " - ", tr), subtitle = paste0("Block ", dat$Block[1])) +
+          theme(axis.text.x = element_text(angle = 45, hjust = 1), legend.position = "bottom") +
+          xlab("Log Saturated K (cm/hr)") + ylab("Log avg Flux (cm/hr)") #+
+        #   facet_wrap(~ Site, ncol = 2, scale = "free")
+      return(p1)
+      }
 ```
 
 ## Visualize all the Saturo Data for each experiment
 
+
+### Plot raw pressure data by serial number (cm)
+
+```{r Plot Pressure data, echo = FALSE, warning = FALSE, fig.width=15,fig.height=10}
+for (site in unique(sat_dat_melt$Site)){
+    for (yr in unique(sat_dat_melt$year)){
+        dat <- subset(sat_dat_melt, Site == site & year == yr)
+        for (seas in unique(dat$season)){
+            p1 <- get_pressure_plot(subset(dat, season == seas))
+            print(p1)
+        }
+    }
+}
+```
+
+Then remove known bad stretches of data due to pressure issues 
+
+```{r Clean up bad data stretches, warning = FALSE}
+sat_dat_clean <- sat_dat_melt
+sat_dat_clean <- subset(sat_dat_clean, !(Serial == 'SAT00002868' & (year == "2022" | year == "2023")))
+
+sat_dat_clean <- subset(sat_dat_clean, !(FileName == "WY-PR-14-12 (2).xlsx" | FileName == "WY-PR-14-12 (3).xlsx"))
+sat_dat_clean <- subset(sat_dat_clean, !(FileName == "MI-PR-8-11 (2).xlsx" | FileName == "MI-PR-8-11.xlsx"))
+
+sat_dat_clean <- subset(sat_dat_clean, !(FileName == "MI-PR-8-2 (1).xlsx"))
+sat_dat_clean <- subset(sat_dat_clean, !(FileName == "RR-AD-6-6 (2).xlsx"))
+
+```
+
+```{r check locations with issues , echo = FALSE, warning = FALSE, fig.width=15,fig.height=10}
+site = "WY"
+yr = "2023"
+seas = "Spring"
+# ser = "SAT00002801"
+dat <- subset(sat_dat_clean, Site == site & year == yr & season == seas & Treatment == "PR" & Block == 11 & Triangle == 12)
+p1 <- ggplot() + geom_line(data = dat,
+          aes(x = `Time (min)`, y = `Flux (cm/hr)`, group = FileName, color = FileName),
+          size = 1, show.legend = FALSE) + 
+          theme_bw(base_size = 16) + 
+          theme(axis.text.x = element_text(angle = 45, hjust = 1), legend.position = "bottom") +
+          xlab("Time (min)") + ylab("Pressure (cm)") +
+          facet_wrap(~FileName)
+p1
+```
+
+```{r Plot Pressure after cleaning , echo = FALSE, warning = FALSE, fig.width=15,fig.height=10}
+for (site in unique(sat_dat_clean$Site)){
+    for (yr in unique(sat_dat_clean$year)){
+        dat <- subset(sat_dat_clean, Site == site & year == yr)
+        for (seas in unique(dat$season)){
+            p1 <- get_pressure_plot(subset(dat, season == seas))
+            print(p1)
+        }
+    }
+}
+```
+
 ### Plot raw flux data (cm/hr)
 
 ```{r Plot Flux cm/s data, echo = FALSE, warning = FALSE, fig.width=15,fig.height=10}
-for (site in unique(sat_dat_melt$Site)){
-    for (block in unique(sat_dat_melt$Block[sat_dat_melt$Site == site])){
+# for (site in unique(sat_dat_melt$Site)){
+#     for (block in unique(sat_dat_melt$Block[sat_dat_melt$Site == site])){
+#             tr <- "AD"
+#             dat <- subset(sat_dat_melt, Site == site & Block == block & Treatment == tr)
+#             p1 <- get_flux_plot(dat, tr)
+#             tr <- "PR"
+#             dat <- subset(sat_dat_melt, Site == site seas& Block == block & Treatment == tr)
+#             p2 <- get_flux_plot(dat, tr)
+#             p <- ggarrange(p1, p2, ncol = 2)
+#             print(p)
+#     }
+# }
+```
+
+### Plot box plots for each site and treatment
+```{r Plot boxplots of KFS data, echo = FALSE, warning = FALSE, fig.width=15,fig.height=5}
+# for (site in unique(sat_dat_clean$Site)){
+#     for (block in unique(sat_dat_clean$Block[sat_dat_clean$Site == site])){
+#             tr <- "AD"
+#             dat <- subset(sat_dat_clean, Site == site & Block == block & Treatment == tr)
+#             p1 <- get_KFS_boxplot_byTri(dat)
+#             tr <- "PR"
+#             dat <- subset(sat_dat_clean, Site == site & Block == block & Treatment == tr)
+#             p2 <- get_KFS_boxplot_byTri(dat)
+#             p <- ggarrange(p1, p2, ncol = 2)
+#             print(p)
+#     }
+# }
+```
+
+
+### Plot flux vs ksat at all 4 intensive hubs and all seasons
+```{r Plot Flux cm/s vs ksat data, echo = FALSE, warning = FALSE, fig.width=15,fig.height=10}
+dat <- sat_dat_clean %>% dplyr::group_by(L1, Kfs, Serial, season, year, Site, Treatment, Block, Triangle) %>% 
+               dplyr::summarize(avg_flux = mean(`Flux (cm/hr)`, na.rm = TRUE))
+# dat <- dat[!(dat$Site == 'WY' & dat$Kfs > 0.3*60), ]
+p <- get_fluxvsksat_plot_all(dat[dat$Kfs > 0,]) # only use +K values to look at this graph
+print(p)
+
+```
+
+```{r Plot boxplots of avg flux data, echo = FALSE, warning = FALSE, fig.width=15,fig.height=5}
+dat <- sat_dat_clean %>% dplyr::group_by(L1, Serial, Kfs, season, year, Site, Block, Treatment, Triangle) %>% 
+               dplyr::summarize(avg_flux = mean(`Flux (cm/hr)`, na.rm = TRUE))
+
+for (site in unique(dat$Site)){
+    for (block in unique(dat$Block[dat$Site == site])){
             tr <- "AD"
-            dat <- subset(sat_dat_melt, Site == site & Block == block & Treatment == tr)
-            p1 <- get_flux_plot(dat, tr)
+            p1 <- get_flux_boxplot_byTri(dat[dat$Site == site & dat$Block == block & dat$Treatment == tr,])
             tr <- "PR"
-            dat <- subset(sat_dat_melt, Site == site & Block == block & Treatment == tr)
-            p2 <- get_flux_plot(dat, tr)
+            p2 <- get_flux_boxplot_byTri(dat[dat$Site == site & dat$Block == block & dat$Treatment == tr,])
             p <- ggarrange(p1, p2, ncol = 2)
             print(p)
     }
 }
 ```
 
+```{r repeat with ksat calculated from slope of flux, echo = FALSE, warning = FALSE, fig.width=15,fig.height=5}
+dat <- sat_dat_clean[sat_dat_clean$variable == 'Flux (cm/s)' & sat_dat_clean$`Time (min)` > 45,] %>% dplyr::group_by(L1, Kfs, season, year, Site, Block, Treatment, Triangle)  %>% 
+               dplyr::mutate(cumsum_flux = cumsum(`Flux (cm/hr)`), slope_flux = coefficients(lm(cumsum_flux ~ `Time (min)`))[2])
 
-### Plot raw pressure data (cm)
 
-```{r Plot Pressure mL/s data, echo = FALSE, warning = FALSE, fig.width=15,fig.height=10}
-for (site in unique(sat_dat_melt$Site)){
-    for (block in unique(sat_dat_melt$Block[sat_dat_melt$Site == site])){
+dat$Kfs <- dat$slope_flux*0.5 - 0.012
+
+for (site in unique(dat$Site)){
+    for (block in unique(dat$Block[dat$Site == site])){
             tr <- "AD"
-            dat <- subset(sat_dat_melt, Site == site & Block == block & Treatment == tr)
-            p1 <- get_pressure_plot(dat, tr)
+            p1 <- get_KFS_boxplot_byTri(dat[dat$Site == site & dat$Block == block & dat$Treatment == tr,])
             tr <- "PR"
-            dat <- subset(sat_dat_melt, Site == site & Block == block & Treatment == tr)
-            p2 <- get_pressure_plot(dat, tr)
+            p2 <- get_KFS_boxplot_byTri(dat[dat$Site == site & dat$Block == block & dat$Treatment == tr,])
             p <- ggarrange(p1, p2, ncol = 2)
             print(p)
     }
 }
-```
-
-### Plot raw flux/pressure 
-
-```{r Plot Flux/Pressure data, echo = FALSE, warning = FALSE, fig.width=15,fig.height=10}
-for (site in unique(sat_dat_melt$Site)){
-    for (block in unique(sat_dat_melt$Block[sat_dat_melt$Site == site])){
-            tr <- "AD"
-            dat <- subset(sat_dat_melt, Site == site & Block == block & Treatment == tr)
-            p1 <- get_KFS_plot(dat, tr)
-            tr <- "PR"
-            dat <- subset(sat_dat_melt, Site == site & Block == block & Treatment == tr)
-            p2 <- get_KFS_plot(dat, tr)
-            p <- ggarrange(p1, p2, ncol = 2)
-            print(p)
-    }
-}
-```
-
-## Investigate spatiotemporal stability and persistence 
-
-Calculate the mean water content and the mean relative difference 
-(relative to other sensors at that site and treatment)
-of each sensor
-
-For hourly data:
-
-```{r Calculate the temporal stability with HOURLY data, warning = FALSE}
-# Calculate the mean and standard deviation of each sensor relative to other sensors in that site/treatment pair
-# wc_dat_mean <- wc_dat %>% dplyr::group_by(Name, Site, Treatment, Block, Triangle, Port) %>% 
-#                dplyr::summarize(avg_value = mean(value, na.rm = TRUE), sd_value = sd(value, na.rm = TRUE))
-
-# wc_dat_mrd <- wc_dat %>% dplyr::group_by(Site, Treatment, Port, datetimeUTC) %>% 
-#                dplyr::mutate(sp_avg_value = mean(value, na.rm = TRUE), sp_sd_value = sd(value, na.rm = TRUE))
-
-# wc_dat_mrd$rd <- (wc_dat_mrd$value - wc_dat_mrd$sp_avg_value)/wc_dat_mrd$sp_avg_value
-
-# wc_dat_mrd_mean <- wc_dat_mrd %>% dplyr::group_by(Name, Site, Treatment, Block, Bl_Tri, Triangle, Port) %>% 
-#                dplyr::summarize(avg_rd = mean(rd, na.rm = TRUE), sd_rd = sd(rd, na.rm = TRUE))
-
-```
-
-... and for daily data:
-
-```{r Calculate the temporal stability with DAILY data, warning = FALSE}
-# Reduce to daily data by extracting measurements from the noon hour only and repeat calculation
-# wc_dat_daily <- subset(wc_dat, hour(datetimeUTC) == 12)
-# wc_dat_daily_mean <- wc_dat_daily %>% dplyr::group_by(Name, Site, Treatment, Block, Triangle, Port) %>% 
-#                dplyr::summarize(avg_value = mean(value, na.rm = TRUE), sd_value = sd(value, na.rm = TRUE))
-
-# wc_dat_daily_mrd <- wc_dat_daily %>% dplyr::group_by(Site, Treatment, Port, datetimeUTC) %>% 
-#                dplyr::mutate(sp_avg_value = mean(value, na.rm = TRUE), sp_sd_value = sd(value, na.rm = TRUE))
-
-# wc_dat_daily_mrd$rd <- (wc_dat_daily_mrd$value - wc_dat_daily_mrd$sp_avg_value)/wc_dat_daily_mrd$sp_avg_value
-
-# wc_dat_daily_mrd_mean <- wc_dat_daily_mrd %>% dplyr::group_by(Name, Site, Treatment, Block, Bl_Tri, Triangle, Port) %>% 
-#                dplyr::summarize(avg_rd = mean(rd, na.rm = TRUE), sd_rd = sd(rd, na.rm = TRUE))
-
-```
-
-### Water Content through time 
-Grouped for each site/treatment pair with spatially averaged water content in black
-
-```{r plot difference wc, warning = FALSE, echo = FALSE, fig.width=15,fig.height=10}
-# t1 <- as_datetime("2022-07-01 00:00:00")
-# t2 <- as_datetime("2023-4-6 00:00:00")
-
-# for (site in unique(wc_dat$Site)){
-#      dat <- subset(wc_dat_daily_mrd, Site == site)
-#      p <- get_wc_d_plot(dat, t1, t2)
-#      print(p)
-#     }
-```
-
-### Relative Difference of Water Content 
-From the spatial average for each site/treatment pair (0 Line in black)
-
-```{r plot mean relative difference wc, warning = FALSE, echo = FALSE, fig.width=15,fig.height=10}
-# t1 <- as_datetime("2022-07-01 00:00:00")
-# t2 <- as_datetime("2023-4-6 00:00:00")
-
-# for (site in unique(wc_dat$Site)){
-#      dat <- subset(wc_dat_daily_mrd, Site == site)
-#      dat_mean <-  subset(wc_dat_daily_mrd_mean, Site == site)
-#      p <- get_wc_mrd_plot(dat, dat_mean, t1, t2)
-#      print(p)
-#     }
-```
-
-
-## Temporal mean & standard deviation of relative difference in water content of each sensor 
-
-### Unranked, ordered by Block 
-```{r Plot temporal stability by site for DAILY data unRanked, warning = FALSE, echo = FALSE, fig.width=15,fig.height=10}
-# for (site in unique(wc_dat_daily_mrd_mean$Site)){
-#      dat <- subset(wc_dat_daily_mrd_mean, Site == site)
-#      p1 <- get_mrd_bar_plot(dat)
-#      p2 <- get_sd_bar_plot(dat)
-#      p <- ggarrange(p1, p2, ncol = 2)
-#      print(p)
-#     }
-```
-
-### Ranked
-```{r Plot temporal stability by site for DAILY data RANKED, warning = FALSE, echo = FALSE, fig.width=15,fig.height=10}
-# for (site in unique(wc_dat_daily_mrd_mean$Site)){
-#      dat <- subset(wc_dat_daily_mrd_mean, Site == site)
-#      p1 <- get_mrd_bar_plot2(dat)
-#      p2 <- get_sd_bar_plot2(dat)
-#      p <- ggarrange(p1, p2, ncol = 2)
-#      print(p)
-#     }
 ```
