--- a/20231004_SWC_Summary.rmd
+++ b/20231004_SWC_Summary.rmd
@@ -21,65 +21,68 @@ This is a notebook to begin to investigate the soil water content sensor data fo
 
 ### Data
 Load all of the zentra information and extract the water content data into a dataframe wc_dat 
-```{r set colors, echo = FALSE}
-cols <- cbind(c("CR","MI","RR","WY"),c("#40442D","#3E8AD5", "#7F8954","#D8B712"))
-row.names(cols) <- cols[,1]
 
-pals <- list()
-pals[['MI']] <-  c("#79BAF2","#3E8AD5", "#205291")
-pals[['CR']] <- c("#797D40","#4B4B17","#232400")  
-pals[['RR']] <- c("#969E55","#666D27","#353E00")
-pals[['WY']] <- c("#F2DDA4","#F0DB6E","#D8B712","#B59655","#705300")
+```{r Load Zentra Datasets from producer sites, echo=FALSE}
+file <- "C:\\Users\\kuhlalex\\OneDrive - Michigan State University\\Water Cycling Indicators\\Data\\Soil Moisture Sensor Data\\Zentra_API\\Tall\\prod_dat_2023.csv" # set the working directory
+prod_dat <- read.csv(file)
 
-```
-```{r Load Zentra Datasets, echo=FALSE}
-file <- "C:\\Users\\kuhlalex\\OneDrive - Michigan State University\\Water Cycling Indicators\\Data\\Soil Moisture Sensor Data\\Zentra_API\\Tall\\all_dat_2023.csv" # set the working directory
-all_dat <- read.csv(file)
-
-all_dat_wc <- all_dat[all_dat$OutputName == "Water Content", ]
+prod_dat_wc <- prod_dat[prod_dat$OutputName == "Water Content", ]
 ```
 
 ```{r Load depth to water key, echo = FALSE}
-key_dat <- read.csv("C:\\Users\\kuhlalex\\OneDrive - Michigan State University\\Water Cycling Indicators\\Data\\Water_Level_Logger_Key.csv")
+# key_dat <- read.csv("C:\\Users\\kuhlalex\\OneDrive - Michigan State University\\Water Cycling Indicators\\Data\\Water_Level_Logger_Key.csv")
 
-key_dat$Sensor_Depth_cm <- as.numeric(key_dat$Sensor_Depth_cm)
-key_dat$Elevation_m <- as.numeric(key_dat$Elevation_m)
-key_dat[is.na(key_dat$Sensor_Depth_cm),'Sensor_Depth_cm'] <- mean(key_dat$Sensor_Depth_cm,na.rm = TRUE)
+# key_dat$Sensor_Depth_cm <- as.numeric(key_dat$Sensor_Depth_cm)
+# key_dat$Elevation_m <- as.numeric(key_dat$Elevation_m)
+# key_dat[is.na(key_dat$Sensor_Depth_cm),'Sensor_Depth_cm'] <- mean(key_dat$Sensor_Depth_cm,na.rm = TRUE)
 
 ```
 
-Next, parse the "Site" column into Treatment, Block, and Triangle columns
+Next, parse the "Site" column into Block, and Triangle columns
 ```{r function to Load all ZENTRA from API, echo = FALSE, warning = FALSE}
-wc_dat <- all_dat_wc
+wc_dat <- prod_dat_wc
 wc_dat$datetimeUTC <- as_datetime(wc_dat$datetime)
 wc_dat$Name <- wc_dat$Site
-wc_dat$Name <- gsub("^AD", "MI-AD", wc_dat$Name) # append MI site ID to these sites
-wc_dat$Name <- gsub("^PR", "MI-PR", wc_dat$Name) # append MI site ID to these sites
-
-wc_dat[wc_dat$Name == "WY_AD-10-3N", "Name"] <- "WY_AD-10-3" # drop the N off the label for WY_AD-10-3 so it will plot together with the other
-wc_dat[wc_dat$Name == "WY_PR-11-12N", "Name"] <- "WY_PR-11-12" # drop the N off the label for WY_AD-10-3 so it will plot together with the other
 
 wc_dat$Site <- sapply(strsplit(wc_dat$Name, "[_|-]"), "[[", 1)
-wc_dat$Treatment <- sapply(strsplit(wc_dat$Name, "[_|-]"), "[[", 2)
-wc_dat$Block <- sapply(strsplit(wc_dat$Name, "[_|-]"), "[[", 3)
-wc_dat$Triangle <- sapply(strsplit(wc_dat$Name, "[_|-]"), "[[", 4)
+wc_dat$Block <- sapply(strsplit(wc_dat$Name, "[_|-]"), "[[", 2)
+wc_dat$Triangle <- sapply(strsplit(wc_dat$Name, "[_|-]"), "[[", 3)
 wc_dat$Bl_Tri <- paste0(wc_dat$Block, "_", wc_dat$Triangle)
-
-wc_dat$Port[wc_dat$Port == 5] <- 3 # rename the port 5 sensor as 3
 
 wc_dat$value <- as.numeric(wc_dat$value)
 
-# set depths to make faceting more clear
-wc_dat$Depth <- '15 cm'
-wc_dat$Depth[wc_dat$Port == 2] <- '40 cm'
-wc_dat$Depth[wc_dat$Port == 3] <- '60 cm'
-wc_dat$Depth[wc_dat$Port == 1 & wc_dat$Site == 'WY'] <- '10 cm'
-wc_dat$Depth[wc_dat$Port == 2 & wc_dat$Site == 'WY'] <- '20 cm'
-wc_dat$Depth[wc_dat$Port == 3 & wc_dat$Site == 'WY'] <- '30 cm'
-
-
 # exclude all data readings above 0.55 and na values
 wc_dat <- subset(wc_dat, !is.na(value) & value < 0.55)
+```
+
+```{r convert water content to storage, echo=FALSE}
+# this is the calculation for wyoming only
+wc_dat$S <- wc_dat$value*10
+wc_dat$S[wc_dat$Port == 3] <- wc_dat$S[wc_dat$Port == 3]*4.096
+
+# at WY-13-15 we only were able to install 2 sensors, at 10 and 20 cm
+wc_dat$S[wc_dat$Name == 'WY-13-15' & wc_dat$Port == 2] <- wc_dat$S[wc_dat$Name == 'WY-13-15' & wc_dat$Port == 2]*5.096
+
+wc_dat_totS <- wc_dat %>% dplyr::group_by(Site, Name, datetimeUTC) %>% 
+               dplyr::mutate(totS = sum(S))
+wc_dat_totS$totS_in <- wc_dat_totS$totS*0.39371
+
+```
+
+```{r Set plotting window}
+t1 <- as_datetime("2023-09-01 00:00:00")
+t2 <- as_datetime("2023-09-30 00:00:00")
+```
+
+```{r plot water storage through time, echo=FALSE, warning = FALSE, fig.width=7,fig.height=5}
+p1 <- ggplot() + geom_point(data = wc_dat_totS,
+          aes(x = datetimeUTC, y = totS_in, group = as.factor(Bl_Tri), color = as.factor(Bl_Tri)),
+          size = 1, show.legend = FALSE) +
+          theme_bw(base_size = 16) + ggtitle('WY Producer Sites') +
+          theme(axis.text.x = element_text(angle = 45, hjust = 1)) +
+          xlab("Date") + ylab("Soil water storage upper 2 feet of soil (in)") +
+          xlim(c(t1, t2)) + ylim(c(0,10)) + facet_wrap(~Block, ncol = 4)
+p1
 ```
 
 ```{r view dataframe}
@@ -95,78 +98,54 @@ wc_dat <- subset(wc_dat, !is.na(value) & value < 0.55)
 Then remove known bad stretches of data due to sensor failure 
 
 ```{r Clean up bad data stretches, warning = FALSE}
-wc_dat <- subset(wc_dat, !(Name == "WY_AD-11-12" & Port == 2))
-wc_dat <- wc_dat[!(wc_dat$Name == "MI-AD_9_1" & wc_dat$datetimeUTC < as_datetime("2022-8-15 19:00:00")), ]
-wc_dat <- wc_dat[!(wc_dat$Name == "MI-PR_9_9" & wc_dat$Port == 3 &
-                   wc_dat$datetimeUTC < as_datetime("2022-8-5 00:00:00") &
-                   wc_dat$datetimeUTC > as_datetime("2022-7-28 00:00:00")), ]
-wc_dat <- wc_dat[!(wc_dat$Name == "MI-PR_8_11" & wc_dat$Port == 3 &
-                   wc_dat$datetimeUTC < as_datetime("2022-7-16 18:00:00") &
-                   wc_dat$datetimeUTC > as_datetime("2022-7-16 12:00:00")), ]
-wc_dat <- wc_dat[!(wc_dat$Name == "RR_PR_4_7" & wc_dat$Port == 3 &
-                   wc_dat$datetimeUTC < as_datetime("2022-10-05 11:00:00") &
-                   wc_dat$datetimeUTC > as_datetime("2022-8-24 02:00:00")), ]
-wc_dat <- wc_dat[!(wc_dat$Name == "RR_PR_4_7" & wc_dat$Port == 3 &
-                   wc_dat$datetimeUTC < as_datetime("2022-12-07 13:00:00") &
-                   wc_dat$datetimeUTC > as_datetime("2022-11-04 12:00:00")), ]
 
-# # exclude all data from deep winter months (12/15 - 3/1) at all sites
-# wc_dat <- wc_dat[!(wc_dat$datetimeUTC < as_datetime("2023-3-01 13:00:00") &
-#                    wc_dat$datetimeUTC > as_datetime("2022-12-15 12:00:00")), ]
 ```
 
-```{r Set plotting window}
-t1 <- as_datetime("2023-04-01 00:00:00")
-t2 <- as_datetime("2023-09-30 00:00:00")
-```
+
 
 ```{r Make some  plotting functions, echo = FALSE}
-# set colors for each region
-
-get_wc_plot <- function(dat, t1, t2, tr){
+get_wc_plot <- function(dat, t1, t2, Block){
       p1 <- ggplot() + geom_point(data = dat,
-          aes(x = datetimeUTC, y = value, group = as.factor(Depth), color = as.factor(Depth)),
+          aes(x = datetimeUTC, y = value, group = as.factor(Port), color = as.factor(Port)),
           size = 1, show.legend = FALSE) +
-          theme_bw(base_size = 16) + ggtitle(paste0(dat$Site[1], " - ", tr), subtitle = paste0("Block ", dat$Block[1])) +
+          theme_bw(base_size = 16) + ggtitle(paste0(dat$Site[1], " - ", Block), subtitle = paste0("Block ", dat$Block[1])) +
           theme(axis.text.x = element_text(angle = 45, hjust = 1)) +
           xlab("Date") + ylab("Water Content (cm^3/cm^3)") +
-          xlim(c(t1, t2)) + facet_grid(Depth ~ Triangle)
+          xlim(c(t1, t2)) + facet_grid(Port ~ Triangle)
       return(p1)
       }
 
 
 get_wc_d_plot <- function(dat, t1, t2){
-     p3 <- ggplot() + geom_point(data = dat, aes(x = datetimeUTC, y = value, color = Block), size = 1) +
+     p3 <- ggplot() + geom_point(data = dat, aes(x = datetimeUTC, y = value, color = Name), size = 1) +
      geom_line(data = dat, aes(x = datetimeUTC, y = sp_avg_value), color = 'black', linewidth = 2, show.legend = FALSE) +
      theme_bw(base_size = 16) + ggtitle(dat$Site[1]) +
      theme(axis.text.x = element_text(angle = 45, hjust = 1), legend.position = "bottom") +
      xlab("Date") + ylab("Water Content (cm^3/cm^3)") +
-     xlim(c(t1, t2)) + facet_grid(Depth ~ Treatment) +
-     scale_color_manual(values = pals[[dat$Site[1]]])
+     xlim(c(t1, t2)) + facet_wrap(~Port, nrow = 3)
      return(p3)
 }
 
-get_wc_d_plot_poster <- function(dat, t1, t2){
-     p3 <- ggplot() + geom_point(data = dat, aes(x = datetimeUTC, y = value, color = Block), size = 1) +
-     geom_point(data = dat, aes(x = datetimeUTC, y = sp_avg_value), color = 'black', size = 1, show.legend = FALSE) +
-     theme_bw(base_size = 16) + ggtitle(dat$Site[1]) +
-     theme(axis.text.x = element_text(angle = 45, hjust = 1)) +
-     xlab("Date") + ylab("Water Content (cm^3/cm^3)") +
-     xlim(c(t1, t2)) + facet_wrap(~ Treatment, nrow =2)
-     return(p3)
-}
+# get_wc_d_plot_poster <- function(dat, t1, t2){
+#      p3 <- ggplot() + geom_point(data = dat, aes(x = datetimeUTC, y = value, color = Block), size = 1) +
+#      geom_point(data = dat, aes(x = datetimeUTC, y = sp_avg_value), color = 'black', size = 1, show.legend = FALSE) +
+#      theme_bw(base_size = 16) + ggtitle(dat$Site[1]) +
+#      theme(axis.text.x = element_text(angle = 45, hjust = 1)) +
+#      xlab("Date") + ylab("Water Content (cm^3/cm^3)") +
+#      xlim(c(t1, t2)) + facet_wrap(~ Treatment, nrow =2)
+#      return(p3)
+# }
 
 
 get_wc_mrd_plot <- function(dat, dat_mean, t1, t2){
-    p4 <-ggplot() + geom_point(data = dat, aes(x = datetimeUTC, y = rd, color = Block), size = 1) +
-     # geom_hline(data = dat_mean, aes(yintercept = avg_rd, color = Block), linewidth = 1, alpha = 0.4) +
+    p4 <-ggplot() + geom_point(data = dat, aes(x = datetimeUTC, y = rd, color = Name), size = 1) +
+     geom_hline(data = dat_mean, aes(yintercept = avg_rd, color = Name), linewidth = 1, alpha = 0.4) +
      geom_hline(yintercept = 0, color = "Black", linewidth = 2) +
      theme_bw(base_size = 16) + ggtitle(dat$Site[1]) +
      theme(axis.text.x = element_text(angle = 45, hjust = 1), legend.position = "bottom") +
      xlab("Date") + ylab("Relative Difference in Water Content (cm^3/cm^3)") +
      xlim(c(t1, t2)) +
-     facet_grid(Depth ~ Treatment) +
-     scale_color_manual(values = pals[[dat$Site[1]]])
+     facet_wrap(~Port, nrow = 3)
      return(p4)
 }
 
@@ -177,21 +156,20 @@ get_mrd_bar_plot <- function(dat){
           theme_bw(base_size = 16) + ggtitle(dat$Site[1]) +
           theme(axis.text.x = element_text(angle = 90, hjust = 1)) +
           xlab("Site") + ylab("Mean Relative Difference in Water Content") +
-          facet_wrap(Depth ~ Treatment, nrow = 3, scale = "free_x")
+          facet_wrap(Port ~ Treatment, nrow = 3, scale = "free_x")
           scale_fill_discrete(name = "Triangle")
      return(p2)
 }
 
 get_mrd_bar_plot2 <- function(dat){
      p2 <- ggplot(data = dat,
-          aes(reorder_within(Bl_Tri, avg_rd, list(Depth,Treatment)), avg_rd, fill = as.factor(Block))) +
+          aes(reorder_within(Bl_Tri, avg_rd, list(Port,Treatment)), avg_rd, fill = as.factor(Block))) +
           geom_bar(position = "dodge", stat = "identity", show.legend = FALSE) +
           theme_bw(base_size = 16) + ggtitle(dat$Site[1]) +
           theme(axis.text.x = element_text(angle = 90, hjust = 1)) +
           xlab("Site") + ylab("Mean Relative Difference in Water Content") +
           scale_x_reordered() +
-          facet_wrap(Depth ~ Treatment, nrow = 3, scale = "free_x") +
-          scale_fill_manual(values = pals[[dat$Site[1]]])
+          facet_wrap(Port ~ Treatment, nrow = 3, scale = "free_x")
      return(p2)
 }
 
@@ -203,8 +181,7 @@ get_mrd_bar_plot3 <- function(dat){
           theme(axis.text.x = element_text(angle = 90, hjust = 1)) +
           xlab("Site") + ylab("Mean Relative Difference in Water Content") +
           scale_x_reordered() +
-          facet_wrap(~Treatment, nrow = 1, scale = "free_x") +
-          scale_fill_manual(values = pals[[dat$Site[1]]])
+          facet_wrap(~Treatment, nrow = 1, scale = "free_x")
      return(p2)
 }
 
@@ -254,20 +231,20 @@ get_sd_bar_plot <- function(dat){
           theme_bw(base_size = 16) + ggtitle(dat$Site[1]) +
           theme(axis.text.x = element_text(angle = 90, hjust = 1)) +
           xlab("Site") + ylab("SD Relative Difference in Water Content") +
-          facet_wrap(Depth ~ Treatment, nrow = 3, scale = "free_x")
+          facet_wrap(Port ~ Treatment, nrow = 3, scale = "free_x")
           scale_fill_discrete(name = "Triangle")
      return(p2)
 }
 
 get_sd_bar_plot2 <- function(dat){
      p2 <- ggplot(data = dat,
-          aes(reorder_within(Bl_Tri, sd_rd, list(Depth,Treatment)), sd_rd, fill = as.factor(Name))) +
+          aes(reorder_within(Bl_Tri, sd_rd, list(Port,Treatment)), sd_rd, fill = as.factor(Name))) +
           geom_bar(position = "dodge", stat = "identity", show.legend = FALSE) +
           theme_bw(base_size = 16) + ggtitle(dat$Site[1]) +
           theme(axis.text.x = element_text(angle = 90, hjust = 1)) +
           xlab("Site") + ylab("Standard Deviation of Relative Difference in Water Content") +
           scale_x_reordered() +
-          facet_wrap(Depth ~ Treatment, nrow = 3, scale = "free_x")
+          facet_wrap(Port ~ Treatment, nrow = 3, scale = "free_x")
      return(p2)
 }
 
@@ -314,15 +291,15 @@ For hourly data:
 
 ```{r Calculate the temporal stability with HOURLY data, warning = FALSE}
 # Calculate the mean and standard deviation of each sensor relative to other sensors in that site/treatment pair
-wc_dat_mean <- wc_dat %>% dplyr::group_by(Name, Site, Treatment, Block, Triangle, Depth) %>% 
+wc_dat_mean <- wc_dat %>% dplyr::group_by(Name, Site, Block, Triangle, Port) %>% 
                dplyr::summarize(avg_value = mean(value, na.rm = TRUE), sd_value = sd(value, na.rm = TRUE))
 
-wc_dat_mrd <- wc_dat %>% dplyr::group_by(Site, Treatment, Depth, datetimeUTC) %>% 
+wc_dat_mrd <- wc_dat %>% dplyr::group_by(Site, Port, datetimeUTC) %>% 
                dplyr::mutate(sp_avg_value = mean(value, na.rm = TRUE), sp_sd_value = sd(value, na.rm = TRUE))
 
 wc_dat_mrd$rd <- (wc_dat_mrd$value - wc_dat_mrd$sp_avg_value)/wc_dat_mrd$sp_avg_value
 
-wc_dat_mrd_mean <- wc_dat_mrd %>% dplyr::group_by(Name, Site, Treatment, Block, Bl_Tri, Triangle, Depth) %>% 
+wc_dat_mrd_mean <- wc_dat_mrd %>% dplyr::group_by(Name, Site, Block, Bl_Tri, Triangle, Port) %>% 
                dplyr::summarize(avg_rd = mean(rd, na.rm = TRUE), sd_rd = sd(rd, na.rm = TRUE))
 
 ```
@@ -333,37 +310,37 @@ wc_dat_mrd_mean <- wc_dat_mrd %>% dplyr::group_by(Name, Site, Treatment, Block, 
 # Reduce to daily data by extracting measurements from the noon hour only and repeat calculation
 wc_dat_daily <- subset(wc_dat, hour(datetimeUTC) == 12 & minute(datetimeUTC) == 0)
 
-wc_dat_daily_mean <- wc_dat_daily %>% dplyr::group_by(Name, Site, Treatment, Block, Triangle, Depth) %>% 
+wc_dat_daily_mean <- wc_dat_daily %>% dplyr::group_by(Name, Site,  Block, Triangle, Port) %>% 
                dplyr::summarize(avg_value = mean(value, na.rm = TRUE), sd_value = sd(value, na.rm = TRUE))
 
-wc_dat_daily_mrd <- wc_dat_daily %>% dplyr::group_by(Site, Depth, datetimeUTC) %>% 
+wc_dat_daily_mrd <- wc_dat_daily %>% dplyr::group_by(Site, Port, datetimeUTC) %>% 
                dplyr::mutate(sp_avg_value = mean(value, na.rm = TRUE), sp_sd_value = sd(value, na.rm = TRUE))
 
 wc_dat_daily_mrd$rd <- (wc_dat_daily_mrd$value - wc_dat_daily_mrd$sp_avg_value)/wc_dat_daily_mrd$sp_avg_value
 
-wc_dat_daily_mrd_mean <- wc_dat_daily_mrd %>% dplyr::group_by(Name, Site, Treatment, Block, Bl_Tri, Triangle, Depth) %>% 
+wc_dat_daily_mrd_mean <- wc_dat_daily_mrd %>% dplyr::group_by(Name, Site, Block, Bl_Tri, Triangle, Port) %>% 
                dplyr::summarize(avg_rd = mean(rd, na.rm = TRUE), sd_rd = sd(rd, na.rm = TRUE))
 
-wc_dat_daily_mrd_mean_alldepth <- wc_dat_daily_mrd %>% dplyr::group_by(Name, Site, Treatment, Block, Bl_Tri, Triangle) %>% 
+wc_dat_daily_mrd_mean_alldepth <- wc_dat_daily_mrd %>% dplyr::group_by(Name, Site, Block, Bl_Tri, Triangle) %>% 
                dplyr::summarize(avg_rd = mean(rd, na.rm = TRUE), sd_rd = sd(rd, na.rm = TRUE))
 
 ```
 
 ### Water Content through time 
-Grouped for each site/treatment pair with spatially averaged water content in black
+Grouped for each site/block pair with spatially averaged water content in black
 
-```{r plot difference wc, warning = FALSE, echo = FALSE, fig.width=11,fig.height=5.5}
+```{r plot difference wc, warning = FALSE, echo = FALSE, fig.width=15,fig.height=10}
 for (site in unique(wc_dat_daily$Site)){
-     dat <- subset(wc_dat_daily_mrd, Site == site)
-     p <- get_wc_d_plot(dat, t1, t2)
-     print(p)
+        dat <- subset(wc_dat_daily_mrd, Site == site)
+        p <- get_wc_d_plot(dat, t1, t2)
+        print(p)
     }
 ```
 
 ### Relative Difference of Water Content 
 From the spatial average for each site/treatment pair (0 Line in black)
 
-```{r plot mean relative difference wc, warning = FALSE, echo = FALSE, fig.width=11,fig.height=5.5}
+```{r plot mean relative difference wc, warning = FALSE, echo = FALSE, fig.width=15,fig.height=10}
 for (site in unique(wc_dat_daily$Site)){
      dat <- subset(wc_dat_daily_mrd, Site == site)
      dat_mean <-  subset(wc_dat_daily_mrd_mean, Site == site)
@@ -373,9 +350,9 @@ for (site in unique(wc_dat_daily$Site)){
 ```
 
 
-## Overall average relative difference in water content of each sensor from the site-wide average colored by block 
-These graphs show the overall relative wetness/dryness of each triangle compared to the mean for that treatment at that site. 
-```{r Plot temporal stability by site for DAILY data unRanked, warning = FALSE, echo = FALSE, fig.width=10,fig.height=15}
+## Temporal mean & standard deviation of relative difference in water content of each sensor 
+
+```{r Plot temporal stability by site for DAILY data unRanked, warning = FALSE, echo = FALSE, fig.width=15,fig.height=10}
 # for (site in unique(wc_dat_daily_mrd_mean$Site)){
 #      dat <- subset(wc_dat_daily_mrd_mean, Site == site)
 #      p1 <- get_mrd_bar_plot(dat)
@@ -385,8 +362,8 @@ These graphs show the overall relative wetness/dryness of each triangle compared
 #     }
 ```
 
-### Ranked by mean within each depth
-```{r Plot temporal stability by site & depth for DAILY data RANKED, warning = FALSE, echo = FALSE, fig.width=10,fig.height=10}
+### Ranked
+```{r Plot temporal stability by site & depth for DAILY data RANKED, warning = FALSE, echo = FALSE, fig.width=15,fig.height=10}
 for (site in unique(wc_dat_daily_mrd_mean$Site)){
      dat <- subset(wc_dat_daily_mrd_mean, Site == site)
      p1 <- get_mrd_bar_plot2(dat)
@@ -396,8 +373,8 @@ for (site in unique(wc_dat_daily_mrd_mean$Site)){
     }
 ```
 
-### Triangles ranked by mean, all depths averaged together
-```{r Plot temporal stability by site DAILY data RANKED, warning = FALSE, echo = FALSE, fig.width=10,fig.height=4}
+### Ranked and aggregated by depth
+```{r Plot temporal stability by site DAILY data RANKED, warning = FALSE, echo = FALSE, fig.width=15,fig.height=4}
 for (site in unique(wc_dat_daily_mrd_mean_alldepth$Site)){
      dat <- subset(wc_dat_daily_mrd_mean_alldepth, Site == site)
      p1 <- get_mrd_bar_plot3(dat)
@@ -411,30 +388,30 @@ for (site in unique(wc_dat_daily_mrd_mean_alldepth$Site)){
 ### MI sites only Ranked by elevation and aggregated by depth
 ```{r Plot temporal stability by elevation DAILY data RANKED, warning = FALSE, echo = FALSE, fig.width=15,fig.height=4}
 # add elevation data
-# pdf("C:\\Users\\kuhlalex\\OneDrive - Michigan State University\\Documents\\FFAR\\Conferences\\20230611_CUAHSI\\Poster\\Graphics\\diffWCxElev.pdf", width=6, height=4)
-# wc_dat3 <- merge(wc_dat_daily_mrd_mean_alldepth, key_dat[, c("Name", "Sensor_Depth_cm", 'Elevation_m','SWS')], by = "Name")
-# get_mrd_bar_plot4(wc_dat3)
-# # print(p1)
-# dev.off()
+pdf("C:\\Users\\kuhlalex\\OneDrive - Michigan State University\\Documents\\FFAR\\Conferences\\20230611_CUAHSI\\Poster\\Graphics\\diffWCxElev.pdf", width=6, height=4)
+wc_dat3 <- merge(wc_dat_daily_mrd_mean_alldepth, key_dat[, c("Name", "Sensor_Depth_cm", 'Elevation_m','SWS')], by = "Name")
+get_mrd_bar_plot4(wc_dat3)
+# print(p1)
+dev.off()
 ```
 
 ```{r Plot temporal stability by SWS DAILY data RANKED, warning = FALSE, echo = FALSE, fig.width=15,fig.height=4}
 # add elevation data
-# pdf("C:\\Users\\kuhlalex\\OneDrive - Michigan State University\\Documents\\FFAR\\Conferences\\20230611_CUAHSI\\Poster\\Graphics\\diffWCxSWS.pdf", width=6, height=4)
-# get_mrd_bar_plot5(wc_dat3)
-# # print(p1)
-# dev.off()
+pdf("C:\\Users\\kuhlalex\\OneDrive - Michigan State University\\Documents\\FFAR\\Conferences\\20230611_CUAHSI\\Poster\\Graphics\\diffWCxSWS.pdf", width=6, height=4)
+get_mrd_bar_plot5(wc_dat3)
+# print(p1)
+dev.off()
 ```
 
 
-```{r plot difference wc 15 cm poster, warning = FALSE, echo = FALSE, fig.width=15,fig.height=10}
-# pdf("C:\\Users\\kuhlalex\\OneDrive - Michigan State University\\Documents\\FFAR\\Conferences\\20230611_CUAHSI\\Poster\\Graphics\\WCxtime15cm.pdf", width=7, height=5)
+```{r plot difference wc, warning = FALSE, echo = FALSE, fig.width=15,fig.height=10}
+pdf("C:\\Users\\kuhlalex\\OneDrive - Michigan State University\\Documents\\FFAR\\Conferences\\20230611_CUAHSI\\Poster\\Graphics\\WCxtime15cm.pdf", width=7, height=5)
 
-# t1 <- as_datetime("2022-08-01 00:00:00")
-# t2 <- as_datetime("2022-12-15 00:00:00")
-# site ='MI'
-# dat <- subset(wc_dat_daily_mrd, Site == site & Port == 1)
-# get_wc_d_plot_poster(dat, t1, t2)
-# # print(p)
-# dev.off()
+t1 <- as_datetime("2022-08-01 00:00:00")
+t2 <- as_datetime("2022-12-15 00:00:00")
+site ='MI'
+dat <- subset(wc_dat_daily_mrd, Site == site & Port == 1)
+get_wc_d_plot_poster(dat, t1, t2)
+# print(p)
+dev.off()
 ```
